/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.microlabs.behavioral.iterator;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.Setter;
import lombok.ToString;

/**
 * @author rolex
 * @since 2020
 */
@Setter
@Getter
@AllArgsConstructor
@ToString
public class Car {
    String id;
    String type;
}
