/*
 * Copyright (C) 2020 bsyonline
 */
package com.rolex.microlabs.creational.factory.factorymethod;

/**
 * @author rolex
 * @since 2020
 */
public class BmwFactory implements CarFactory {
    @Override
    public Car create() {
        return new Bmw();
    }
}
